WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130153
Subpixel rendering: Nested layers with subpixel accumulation paint to wrong position.
https://bugs.webkit.org/show_bug.cgi?id=130153
Summary
Subpixel rendering: Nested layers with subpixel accumulation paint to wrong p...
alan
Reported
2014-03-12 12:50:53 PDT
Subpixels need to be accumulated through nested layer to calculate correct painting positing.
Attachments
Patch
(12.46 KB, patch)
2014-03-12 13:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion
(512.17 KB, application/zip)
2014-03-13 19:47 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(515.55 KB, application/zip)
2014-03-13 20:22 PDT
,
Build Bot
no flags
Details
Patch
(13.94 KB, patch)
2014-03-18 19:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(14.76 KB, patch)
2014-03-19 19:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-03-12 13:52:00 PDT
Created
attachment 226551
[details]
Patch
Csaba Osztrogonác
Comment 2
2014-03-13 09:43:01 PDT
Comment on
attachment 226551
[details]
Patch Clearing flags on attachment: 226551 Committed
r165540
: <
http://trac.webkit.org/changeset/165540
>
Csaba Osztrogonác
Comment 3
2014-03-13 09:43:08 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 4
2014-03-13 11:42:24 PDT
Re-opened since this is blocked by
bug 130199
Build Bot
Comment 5
2014-03-13 19:47:06 PDT
Comment on
attachment 226551
[details]
Patch
Attachment 226551
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6741007710289920
New failing tests: compositing/hidpi-absolute-subpixel-positioned-transformed-elements.html
Build Bot
Comment 6
2014-03-13 19:47:11 PDT
Created
attachment 226642
[details]
Archive of layout-test-results from webkit-ews-08 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-08 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Build Bot
Comment 7
2014-03-13 20:22:09 PDT
Comment on
attachment 226551
[details]
Patch
Attachment 226551
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4589675771592704
New failing tests: compositing/hidpi-absolute-subpixel-positioned-transformed-elements.html
Build Bot
Comment 8
2014-03-13 20:22:13 PDT
Created
attachment 226645
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
alan
Comment 9
2014-03-18 19:13:56 PDT
Created
attachment 227145
[details]
Patch
Simon Fraser (smfr)
Comment 10
2014-03-19 16:58:54 PDT
Comment on
attachment 227145
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=227145&action=review
> Source/WebCore/rendering/RenderLayer.cpp:4176 > + // Translate the graphics context to the snapping position to avoid off-device-pixel positing. This works as long as the user defined > + // transform is not producing subpixel results (translate(0.5px, 0.5px) vs. translate(0.7px, 0.7px))
"This works as long as" isn't really adding information here, and it's not clear what "works" means. I'd remove this second sentence.
alan
Comment 11
2014-03-19 18:20:51 PDT
(In reply to
comment #10
)
> (From update of
attachment 227145
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=227145&action=review
> > > Source/WebCore/rendering/RenderLayer.cpp:4176 > > + // Translate the graphics context to the snapping position to avoid off-device-pixel positing. This works as long as the user defined > > + // transform is not producing subpixel results (translate(0.5px, 0.5px) vs. translate(0.7px, 0.7px)) > > "This works as long as" isn't really adding information here, and it's not clear what "works" means. I'd remove this second sentence.
Indeed. Thanks for the review.
alan
Comment 12
2014-03-19 19:16:28 PDT
Created
attachment 227242
[details]
Patch
alan
Comment 13
2014-03-19 19:16:46 PDT
Comment on
attachment 227242
[details]
Patch EWS testing.
WebKit Commit Bot
Comment 14
2014-03-20 07:20:53 PDT
Comment on
attachment 227242
[details]
Patch Clearing flags on attachment: 227242 Committed
r165963
: <
http://trac.webkit.org/changeset/165963
>
WebKit Commit Bot
Comment 15
2014-03-20 07:20:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug