Source/WebCore/rendering/RenderLayerBacking.h
@@ -213,6 +213,8 @@ public:
     void setBlendMode(BlendMode);
 #endif
 
+    LayoutSize devicePixelFractionFromRenderer() const { return m_devicePixelFractionFromRenderer; }
+
 private:
     FloatRect backgroundBoxForPainting() const;
 
